Atualização do arquivo gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
 .idea
-.gitignore
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environments
+.env
 .venv
-.__pycache__
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
